RESOLVED FIXED32166
Crash indenting mixed text of pasted table along with user-entered text
https://bugs.webkit.org/show_bug.cgi?id=32166
Summary Crash indenting mixed text of pasted table along with user-entered text
Enrica Casucci
Reported 2009-12-04 11:27:00 PST
Created attachment 44324 [details] Repro test Attaching repro case.
Attachments
Repro test (825 bytes, text/html)
2009-12-04 11:27 PST, Enrica Casucci
no flags
Patch (4.03 KB, patch)
2009-12-04 11:37 PST, Enrica Casucci
sullivan: review+
Enrica Casucci
Comment 1 2009-12-04 11:37:32 PST
WebKit Review Bot
Comment 2 2009-12-04 11:40:43 PST
style-queue ran check-webkit-style on attachment 44325 [details] without any errors.
Enrica Casucci
Comment 3 2009-12-04 11:51:08 PST
Committed revision 51704.
Note You need to log in before you can comment on or make changes to this bug.