Mail.app crashes when indenting table pasted from Numbers.app. <rdar://problem/7209507> https://bugs.webkit.org/show_bug.cgi?id=32166

Reviewed by John Sullivan.

WebCore:

Test: LayoutTests/editing/execCommand/indent-partial-table.html

* editing/IndentOutdentCommand.cpp:
(WebCore::IndentOutdentCommand::indentRegion): Added test to verify that the end of the paragraph
after the selection has not been moved.

LayoutTests:

* editing/execCommand/indent-partial-table-expected.txt: Added.
* editing/execCommand/indent-partial-table.html: Added.



Canonical link: https://commits.webkit.org/43131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51704 268f45cc-cd09-0410-ab3c-d52691b4dbfc